[project]
name = "find-deps"
version = "0.1.0"
description = "Search all JavaScript or Python dependency lists on your device"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
find-deps = "main:main"

[dependency-groups]
dev = ["ruff>=0.13.0"]

# Configuring Ruff: https://docs.astral.sh/ruff/configuration/
[tool.ruff] # https://docs.astral.sh/ruff/settings/
line-length = 99
fix = true

[tool.ruff.lint] # https://docs.astral.sh/ruff/settings/#lint
# Rules: https://docs.astral.sh/ruff/rules/
extend-select = ["I"]

[tool.ruff.lint.isort] # https://docs.astral.sh/ruff/settings/#lintisort
force-single-line = true # prevents merge conflicts
lines-after-imports = 2
